# dbt_python_client

./: LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: CODEOWNERS
.github/workflows/: install_and_test.yaml
revefi-dbt-client/: __init__.py  config.py  test_config.py  test_upload.py  upload.py
revefi_dbt_client/: __main__.py  api_helper.py  logging.py  main.py  upload.py
src/: __init__.py
src/revefi-dbt-client/: upload.py
src/revefi_dbt_client/: __init__.py  __main__.py  api_helper.py  config.py  main.py  parser.py  upload.py
tests/: test_config.py  test_main.py  test_parser.py  test_upload.py
